# gstat

./: Cargo.toml  README.md
src/: cli.rs  format.rs  main.rs  status.rs  types.rs  watcher.rs
tests/: integration.rs
