[package]
name = "gstat"
version = "0.1.0"
edition = "2021"
description = "Reactive git status watcher using filesystem events"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
notify = "7"
notify-debouncer-mini = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
libc = "0.2"
